--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-otp-input": "^3.1.1"
   },
