--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
     "@tanstack/react-query": "^5.67.3",
     "axios": "^1.8.2",
     "next": "^15.2.2",
@@ -17,7 +18,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
-    "react-otp-input": "^3.1.1"
+    "react-otp-input": "^3.1.1",
+    "react-toastify": "^11.0.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
